# iniparser

./: CMakeLists.txt
examples/: INIReaderExample.cpp  cpptest.sh  ini_dump.c  ini_example.c  ini_xmacros.c
src/: INIReader.cpp  ini.c
tests/: unittest.c  unittest_string.c
